Added featured flower

--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@300;400;700;800&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
+
+
 </head>
+
 <body>
-    
+    <header>
+        <!-- This is navigation section  -->
+        <nav>
+            <div class="menu-container">
+                <div class="title-con">
+                    <img class="menu-icon" src="./Flower Asset/menu-title-flower.png" alt="">
+                    <h3 class="menu-title">Flower</h3>
+                </div>
+                <div class="menus">
+                    <li>Home</li>
+                    <li>Service</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </div>
+            </div>
+        </nav>
+
+        <!-- This is banner section  -->
+        <section>
+            <div class="banner-container">
+                <div class="banner-info">
+                    <h1 class="banner-title">Let's make <br>beautiful flowers a <br>part of your life.</h1>
+                    <p class="banner-description">It is a long established fact that a reader will be distracted by the
+                        readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is
+                        <br>that it
+                        has a more-or-less normal distribution of letters.</p>
+                    <button class="shop-now-btn">Shop Now</button>
+                </div>
+                <img class="banner-img" src="./Flower Asset/pngwing 10.png" alt="">
+
+            </div>
+        </section>
+
+    </header>
+    <main>
+
+        <section>
+            <div class="feature-container">
+                <div class="feature-info">
+                    <h3 class="feature-title">Our Featured Flowers</h3>
+                    <p class="feature-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                </div>
+                <div class="feature-photos">
+                    <div class="feature-img pink-tulip">
+                        <img src="./Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <div class="feature-img bouquet">
+                        <img src="./Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <div class="feature-img yellow-tulip">
+                        <img src="./Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                </div>
+                <div class="img-link">
+                    <h5><u>Pink Tulip</u></h5>
+                    <h5><u>Bouquet of flowers</u></h5>
+                    <h5><u>Yellow Tulip</u></h5>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
