Added sign up section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </header>
     <main>
 
+        <!-- This is feature section -->
         <section>
             <div class="feature-container">
                 <div class="feature-info">
@@ -78,6 +79,35 @@
                 </div>
             </div>
         </section>
+
+        <!-- This is service section  -->
+        <section class="service-section">
+            <div class="service-container">
+                <div class="services">
+                    <img src="./Flower Asset/Group 57.png" alt="" class="service-icon">
+                    <h4 class="service-title">Same Day Delivery. Click & Collect.</h4>
+                </div>
+                <div class="services">
+                    <img src="./Flower Asset/Group 58.png" alt="" class="service-icon">
+                    <h4 class="service-title">Fresh Flowers. Local Growers.</h4>
+                </div>
+                <div class="services">
+                    <img src="./Flower Asset/Group 59.png" alt="" class="service-icon">
+                    <h4 class="service-title">24/7 Free Support.</h4>
+                </div>
+            </div>
+        </section>
+
+        <section class="sign-up-section">
+            <div class="sign-up-container">
+                <h1 class="sign-up-title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                <p class="sign-up-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <button class="sign-up-btn">Sign Up</button>
+            </div>
+            <img src="./Flower Asset/pngwing 8.png" alt="">
+        </section>
+
+        
 
     </main>
     <footer>
