Added deal section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     <p class="banner-description">It is a long established fact that a reader will be distracted by the
                         readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is
                         <br>that it
-                        has a more-or-less normal distribution of letters.</p>
+                        has a more-or-less normal distribution of letters.
+                    </p>
                     <button class="shop-now-btn">Shop Now</button>
                 </div>
                 <img class="banner-img" src="./Flower Asset/pngwing 10.png" alt="">
@@ -59,7 +60,8 @@
             <div class="feature-container">
                 <div class="feature-info">
                     <h3 class="feature-title">Our Featured Flowers</h3>
-                    <p class="feature-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                    <p class="feature-description">It is a long established fact that a reader will be distracted by the
+                        readable <br>content of a page when looking at its layout.</p>
                 </div>
                 <div class="feature-photos">
                     <div class="feature-img pink-tulip">
@@ -98,10 +100,12 @@
             </div>
         </section>
 
+        <!-- This is sign up section  -->
         <section class="sign-up-section">
             <div class="sign-up-container">
-                <h1 class="sign-up-title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
-                <p class="sign-up-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <h1 class="sign-up-title">Hot Deal ! Sale Up To 25% <span class="span-color">Off</span></h1>
+                <p class="sign-up-description">It is a long established fact that a reader will be distracted by the
+                    readable <br>content of a page when looking at its layout.</p>
                 <button class="sign-up-btn">Sign Up</button>
             </div>
             <img src="./Flower Asset/pngwing 8.png" alt="">
@@ -112,22 +116,35 @@
             <div class="instagram-container">
                 <div class="instagram-info">
                     <h3 class="instagram-title">Instagram</h3>
-                    <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                    <p class="instagram-description">It is a long established fact that a reader will be distracted by
+                        the readable <br>content of a page when looking at its layout.</p>
                 </div>
                 <div class="instagram-photos">
-                    <img class="instagram-img" src="./Flower Asset/Flower 01.png" alt="" >
-                    <img class="instagram-img" src="./Flower Asset/Rectangle 4.png" alt="" >
-                    <img class="instagram-img" src="./Flower Asset/Rectangle 5.png" alt="" >
-                    <img class="instagram-img" src="./Flower Asset/Rectangle 6.png" alt="" >
+                    <img class="instagram-img" src="./Flower Asset/Flower 01.png" alt="">
+                    <img class="instagram-img" src="./Flower Asset/Rectangle 4.png" alt="">
+                    <img class="instagram-img" src="./Flower Asset/Rectangle 5.png" alt="">
+                    <img class="instagram-img" src="./Flower Asset/Rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
 
-        
+        <!-- This is deal section  -->
+        <section class="deal-section">
+            <div class="deal-container">
+                <div class="deal-info">
+                    <h1 class="deal-title">Get The Latest Deals</h1>
+                    <p class="deal-description">$30 coupon for first shopping</p>
+                    <form class="deal-input-area" action="">
+                        <input class="deal-input" type="email" placeholder="Enter your email here....">
+                        <button class="subscribe-btn">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
-
+        
     </footer>
 </body>
 
