--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
 
     </main>
     <footer>
-        
+        <section class="footer-section">
+            <div class="footer-container">
+                <h1 class="footer-title"><span class="span-color">Flower</span>Shop</h1>
+                <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <p class="copyright"><small>@2020-2023, FlowerShop.com. All rights reserved. </small></p>
+            </div>
+        </section>
     </footer>
 </body>
 
