--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
 <body>
     <header>
         <!-- This is navigation section  -->
-        <nav>
-            <div class="menu-container">
-                <div class="title-con">
-                    <img class="menu-icon" src="./Flower Asset/menu-title-flower.png" alt="">
-                    <h3 class="menu-title">Flower</h3>
+        <section>
+            <nav>
+                <div class="menu-container">
+                    <div class="title-con">
+                        <img class="menu-icon" src="./Flower Asset/menu-title-flower.png" alt="">
+                        <h3 class="menu-title">Flower</h3>
+                    </div>
+                    <div class="menus">
+                        <li>Home</li>
+                        <li>Service</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </div>
                 </div>
-                <div class="menus">
-                    <li>Home</li>
-                    <li>Service</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                </div>
-            </div>
-        </nav>
+            </nav>
+        </section>
 
         <!-- This is banner section  -->
         <section>
